--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<div id="custom-cursor" class="pointer-events-none fixed w-16 h-16 ">
+    <img src="assets/image.png" alt="Cursor" class="w-full h-full object-contain" />
+  </div>
+  <router-outlet></router-outlet>
+  
