--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+body {
+    cursor: none;
+  }
+  #custom-cursor {
+    width: 50px;
+    height:50px;
+    pointer-events: none; 
+  }
+  
+  button {
+    cursor: none; 
+  }
